# Page-Analyzer

./: .env  .flake8  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  sonar.yml
page_analyzer/: app.py  database.py  parser.py  url_validator.py
page_analyzer/templates/: index.html  layout.html  urls.html  urls_show.html
templates/: index.html
