[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyser Trainee Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.4",
    "psycopg2-binary>=2.9.10",
    "validators>=0.35.0",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
]
